tomcat/kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-starter
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: starter.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tomcat-starter
                port:
                  number: 8080
